--- a/index.css
+++ b/index.css
@@ -1,346 +1,106 @@
-.slider-thumb2::before {
-	position: absolute;
-	content: "";
-	left: 60%;
-	top: 3%;
-	width: 300px;
-	height: 300px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-.slider-thumb4::before {
-	position: absolute;
-	content: "";
-	left: 7%;
-	top: 3%;
-	width: 100px;
-	height: 100px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
+        .songscontent {
+            border: 3px solid transparent;
+        }
 
-.slider-thumb3::before {
-	position: absolute;
-	content: "";
-	left: 30%;
-	top: 65%;
-	width: 700px;
-	height: 700px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-
-.slider-thumb::before {
-	position: absolute;
-	content: "";
-	left: 0%;
-	top: 20%;
-	width: 500px;
-	height: 500px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-.slider-thumb5::before {
-	position: absolute;
-	content: "";
-	left: 10%;
-	top: 120%;
-	width: 500px;
-	height: 500px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-.slider-thumb6::before {
-	position: absolute;
-	content: "";
-	left: 70%;
-	top: 150%;
-	width: 200px;
-	height: 200px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-@keyframes sliderShape{
-  0%,100%{
-  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
-  }
-  34%{
-      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
-    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
-  }
-  50%{
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
-  }
-  67%{
-    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
-    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
-  }
-}
-
-.slider-thumb7::before {
-	position: absolute;
-	content: "";
-	left: 10%;
-	top: 155%;
-	width: 400px;
-	height: 400px;
-	background: #17141d;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
-}
-@keyframes sliderShape{
-  0%,100%{
-  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
-  }
-  34%{
-      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
-    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
-  }
-  50%{
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
-  }
-  67%{
-    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
-    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
-  }
-}
-.zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
-@font-face {
-   font-family: pusab;
-   src: url(/fnt/Pusab.ttf);
-}
-@font-face {
-   font-family: lemon;
-   src: url(/fnt/lemon.ttf);
-}
-
-
-* {
-   font-family: pusab;
-   color: white;
-}
-.p3 {
-   font-family: pusab;
-   color: white;
-   font-size: 50px;
-   -webkit-text-stroke: 2px #1c87c9;
-}
-.p6 {
-   font-family: pusab;
-   color: white;
-   font-size: 80px;
-   -webkit-text-stroke: 2px black;
-}
-.p7 {
-   font-family: lemon;
-   color: white;
-   font-size: 30px;
-   -webkit-text-stroke: 2px black;
-}
-
-.p1 {
-  font-family: Heavitas;
-}/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #995533;
-  margin: auto;
-  padding: 20px;
-  width: 800px;
-  height: 1200px;
-  border: 4px solid Black;
-border-radius: 25px;
-}
-@keyframes modal-content{
-   from{ top: 0px;}
-   to{top: 300px;}
-}
-/* The Close Button */
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.rope{
-   position: absolute;
-   width: 7%;
-   left: 800px;
-}
-.rope:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
-.johnrickgd{
-     width: 40%;
-     bottom: 10px;
-     right: 120px;
-     position: relative;
-}
-.inbox{
-     width: 10%;
-     bottom: 100px;
-     right: 120px;
-     position: relative;
-}
-.rgdps{
-     width: 10%;
-     right: 120px;
-     position: relative;
-}
-.like{
-     width: 6%;
-     right: 120px;
-     position: relative;
-}
-.like:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
-.description{
-     font-family: lemon;
-     color: white;
-     font-size: 25px;
-     
-}
-.current {
-     color: white;
-     font-size: 35px;
-     position: relative;
-     top: 40px;
-     right: 30px;
-}
-.current2 {
-     color: white;
-     font-size: 35px;
-     position: relative;
-     top: 40px;
-     right: 30px;
-}
-.calc-grid{
-     position: relative;
-     left: 300px;
-     top: 280px;
-
-}
-.calc-grid2{
-     position: relative;
-     left: 300px;
-     top: 80px;
-
-}
-.message{
-  background-color: #5C331F;
-  margin: auto;
-  padding: 20px;
-  border: 4px solid Black;
-  border-radius: 25px;
-  width: 600px;
-  height: 200px;
-}
-
-.messagecard2{
-    bottom: 650px;
-    position: relative;
-}
-.messagecard3{
-    bottom: 600px;
-    position: relative;
-}
-.close2{
-   position: relative;
-   width: 10%;
-   color: white;
-   float: right;
-   font-size: 300px;
-   font-weight: bold;
-}
-.close3{
-   width: 120%;
-   left: 900px;
-   float: right;
-  }
-.text {
-    font-family: Helvetica, sans-serif;
-    max-width: 1200px;
-    margin: 0 auto;
-    font-size: 20px;
-    line-height: 48px;
-    padding: 24px;
-}
-
-.white {
-    color: #ffffff;
-}
-
-.blue {
-    color: #00ffff;
-}
-
-a:link {
-    color: #00ffff;
-}
-
-a:visited {
-    color: #00ffff;
-}
-
-a:hover {
-    color: #00ffff;
-}
-
-a:active {
-    color: #00f
-      fff;
-}
+        .prismHeader {
+            max-width: 90%;
+            height: auto;
+        }
+ 
+        .dashboard-container.gdbox-brown.songs {
+            margin-top: 1%;
+            margin-left: calc(5vw + (10vw / 1000));
+            margin-right: calc(5vw + (10vw / 1000));
+            margin-bottom: 1%;
+        }
+ 
+        .img {
+            border: 3px solid #ffffff;
+            border-radius: 25px;
+            box-shadow: 0px 0px 20px black;
+        }
+ 
+        .title {
+            font-family: pusab;
+            color: white;
+            text-shadow: 0px 0px 6px black;
+            -webkit-text-stroke: 1px black;
+            font-size: 50px;
+        }
+ 
+        .desc3 {
+            font-family: pusab;
+            color: white;
+            text-shadow: 0px 0px 6px black;
+            -webkit-text-stroke: 0.6px black;
+            font-size: 15px;
+        }
+ 
+        .desc {
+            font-family: pusab;
+            color: yellow;
+            text-shadow: 0px 0px 6px black;
+            -webkit-text-stroke: 0.6px black;
+            font-size: 15px;
+        }
+ 
+        .Names {
+            font-family: pusab;
+            color: #6725F8;
+            text-shadow: 0px 0px 6px black;
+            -webkit-text-stroke: 1px black;
+            font-size: 25px;
+        }
+ 
+        img {
+            /* Adjust the values as needed */
+            margin: 10px; /* This adds space to all sides of the image */
+        }
+ 
+        .btnfix {
+            background-color: #25e028;
+            color: white;
+            font-size: 20px;
+            box-shadow: 0px 0px 10px black;
+            text-shadow: 0px 0px 7px black;
+            -webkit-text-stroke: 0.7px black;
+            border-radius: 7px;
+            width: 110px;
+            border: 2px solid #ffffff;
+            font-family: pusab;
+        }
+ 
+        .loading {
+            position: relative;
+            display: none;
+        }
+ 
+        .loading::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 40px;
+            height: 40px;
+            margin: -20px 0 0 -20px;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #3498db;
+            border-radius: 50%;
+            animation: spin 2s linear infinite;
+        }
+ 
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+        .message {
+            font-family: pusab;
+            color: white;
+            text-shadow: 0px 0px 6px black;
+            -webkit-text-stroke: 0.6px black;
+            font-size: 15px;
+		}
