--- a/index.css
+++ b/index.css
@@ -1,4 +1,29 @@
-        .songscontent {
+                 body {
+             display: flex;
+             min-height: 100vh;
+             flex-direction: column;
+        }
+
+         main {
+             flex: 1;
+         }
+         
+         footer {
+             display: inline-block;
+             position: fixed;
+             bottom: 0;
+             left: 0;
+             margin-top: auto;
+             text-align: center;
+             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+         }
+
+         footer img {
+             width: 50px;
+             height: 50px;
+	 }
+       
+         .songscontent {
             border: 3px solid transparent;
         }
 
