--- a/index.css
+++ b/index.css
@@ -129,3 +129,10 @@
             -webkit-text-stroke: 0.6px black;
             font-size: 15px;
 	}
+
+        .starrate, featuredrate, epicrate {
+	    font-family: pusab;
+            color: white;
+	    width: 48%;
+	    padding: 10px;
+	    box-sizing: border-box;
