--- a/index.css
+++ b/index.css
@@ -136,3 +136,9 @@
 	    width: 48%;
 	    padding: 10px;
 	    box-sizing: border-box;
+	}
+
+        .starrate img, .featuredrate img, .epicrate img {
+	    width: 117px;
+	    height: 117px;
+	}
