--- a/index.css
+++ b/index.css
@@ -133,6 +133,8 @@
         .starrate, .featuredrate, .epicrate {
 	    font-family: pusab;
             color: white;
+	    -webkit-text-stroke: 1px black;
+	    text-stroke: 1px black;
 	    width: 48%;
 	    padding: 10px;
 	    box-sizing: border-box;
